[package]
name = "serde_int_tag"
version = "0.1.0"
edition = "2024"
description = "A procedural macro for tagging struct fields with integer values"
license = "MIT"
documentation = "https://docs.rs/serde_int_tag"
homepage = "https://github.com/larrydewey/serde_int_tag"
repository = "https://github.com/larrydewey/serde_int_tag"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^2.0", features = ["full"] }
ciborium = "^0.2"

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
